<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:label="@string/aboutTitleREG"
    android:background="#F7F9F9"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/title_reg"
        android:textSize="30sp"
        android:textColor="#000000"
         />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal">

    </LinearLayout>
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tv_name_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_name_reg"
            android:textSize="20sp"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/et_name_reg"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/et_name_reg"
            android:textSize="20sp"
            android:textColor="#000000"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tv_uesr_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_user_reg"
            android:textSize="20sp"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/et_user_reg"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/et_user_reg"
            android:textSize="20sp"
            android:textColor="#000000"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tv_password_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_password_reg"
            android:textSize="20sp"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/et_password_reg"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/et_password_reg"
            android:inputType="textPassword"
            android:textSize="20sp"
            android:textColor="#000000"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tv_conpassword_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_conpassword_reg"
            android:textSize="20sp"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/et_conpassword_reg"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/et_conpassword_reg"
            android:inputType="textPassword"
            android:textSize="20sp"
            android:textColor="#000000"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/tv_vcode_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_vcode_reg"
            android:textSize="20sp"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/et_vcode_reg"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:hint="@string/et_vcode_reg"
            android:textSize="20sp"
            android:textColor="#000000"/>
        <Button
            android:id="@+id/bt_vcode_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_vcode_reg"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/bt_register_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_register_reg"/>

        <Button
            android:id="@+id/bt_already_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_already_reg"
            android:textColor="#1A7AE9"
            android:background="#F7F9F9"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="bottom"
            android:background="#1A76E9">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="乐学悦享团队技术支持"
                android:textColor="#FFFFFF"
                android:textSize="20sp"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>