<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="#F7F9F9"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="809px"
        android:background="@mipmap/h1"
        android:layout_gravity="top"
        android:orientation="vertical">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="80sp"
            android:layout_height="100dp"
            android:gravity="right"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="60sp"
                android:layout_height="50dp"
                android:text="@string/tv_username"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/tv_password"
                android:layout_width="60sp"
                android:layout_height="50dp"
                android:text="@string/tv_password"
                android:gravity="center"
                android:textSize="25sp"
                android:textColor="#000000"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_username"
                android:layout_width="190dp"
                android:layout_height="50dp"
                android:hint="@string/et_username"
                android:gravity="center"
                android:singleLine="true" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="190dp"
                android:layout_height="50dp"
                android:hint="@string/et_password"
                android:gravity="center"
                android:inputType="textPassword" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="100dp"
            android:gravity="bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/bt_fgt"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:text="@string/bt_fgt"/>


        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/bt_log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_log"/>

        <Button
            android:id="@+id/bt_res"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_res"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal">

    <LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="50dp"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_gravity="bottom"
    android:background="#1A76E9">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="乐学悦享团队技术支持"
        android:textColor="#FFFFFF"
        android:textSize="20sp"/>
</LinearLayout>

</LinearLayout>


    </LinearLayout>
